tests/tooling/fixtures/native/recovery/positive/message_send_nil_receiver_unary_short_circuit.objc3
// Positive fixture: explicit reassignment to nil enables compile-time unary send elision.
module MessageSendNilReceiverUnaryShortCircuit;

fn main() {
  let receiver = 1;
  receiver = nil;
  let sent = [receiver ping];
  return sent + 9;
}
